# HNUCourseSelector

./: .gitignore  CourseSelector.py  GUI.py  MainService.py  README.md  Utils.py  config.json.example  getInfos.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
