[project]
name = "HNUCourseSelector"
version = "1.1"
description = "o0o0o0o0o0o0o0o0o0o0o0o0oxDxDxDxDxDxDxDxDxDxDxDxDxDxD"
requires-python = ">=3.13"
dependencies = [
    "ddddocr>=1.5.6",
    "selenium>=4.35.0",
    "pillow>=12.1.0",
    "selenium>=4.35.0",
    "beautifulsoup4>=4.14.3",
    "customtkinter>=6.0.0",
]
